--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
 </div>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    
-                    <!-- <img class="img-responsive" src="/docs/assets/img/services/first-encounters-gun-blast.gif" alt=""> -->
-					<video aria-hidden="false" poster="" width="100%" loop="" playsinline="" preload="metadata" data-auto-logging-id="fbc9c29c7"><source src="https://scontent-lhr6-2.oculuscdn.com/v/t64.7195-25/499310831_1328756148920309_4168641560444616720_n.mp4?_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=b20b63&amp;_nc_ohc=iU-X6zfRQgIQ7kNvwHG_8bN&amp;_nc_oc=AdlzCFZNyyeKrsnUvSNUuNM3XJ_1QjycPA2mh3GK1rR2U2vyNk8WQyQYcbyqBJwjff4&amp;_nc_zt=28&amp;_nc_ht=scontent-lhr6-2.oculuscdn.com&amp;_nc_gid=8tFGyuOjdeIBfzBiJo90_Q&amp;oh=00_AfpxInqlQZc6CLEhHsLL1Gh5ZVExfKwG7mh8hhpj2fnCcg&amp;oe=69604BB3"></video>
+
+					<iframe width="100%" height="300" src="https://www.youtube.com/embed/XIs_EKgbNVU" title="" frameBorder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowFullScreen><br>Powered by <a href="https://youtubeembedcode.com">how to embed youtube video</a> and <a href="https://skipboregler.com/skip-bo-regras/">skip bo regras</a></iframe>
                     
                 </div>
             </div>
