--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Blumhouse Enhanced Cinema<br><small>Meta Quest 3</small></h2>
                     <div class="lead"><p>Scares spill from the screen with visual effects that pull you into the Blumhouse universe. Feel more of the suspense, dread, and terror that you love.</p></div>
-</div>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
 
 					<iframe width="100%" height="300" src="https://www.youtube.com/embed/XIs_EKgbNVU" title="" frameBorder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowFullScreen><br>Powered by <a href="https://youtubeembedcode.com">how to embed youtube video</a> and <a href="https://skipboregler.com/skip-bo-regras/">skip bo regras</a></iframe>
                     
